Dark mode now works, one issue on the setting page there is a white section when its darkmode that i need help getting rid of.

--- a/app/static/home.css
+++ b/app/static/home.css
@@ -98,6 +98,15 @@
   
   }
 
+  .darkmode {
+    background-color: rgb(129, 129, 129);
+    
+  }
+
+  .darkhfmode {
+    background-color: black;
+  }
+
   
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
