--- a/app/static/setting.css
+++ b/app/static/setting.css
@@ -9,12 +9,13 @@ fieldset {
   border: 1px solid #ccc;
   padding: 3rem;
   padding-top: 1rem;
+  padding-bottom: 1rem;
   text-align: left;
   margin-left: 10rem;
   margin-right: 10rem;
   margin-top: 1rem;
   border-radius: 1rem;
-  margin-bottom: 10px;
+  margin-bottom: 5rem;
   box-shadow: 1rem;
 
 }
@@ -54,4 +55,19 @@ legend {
 .confirm-label {
   display: inline-block; /* Ensures the label appears on one line */
   width: auto; /* Allows the label to expand to accommodate its content */
+}
+
+#editSubmit {
+  background-color: #1d81ec ;
+  border-radius: 0.5rem;
+  border-color: #1d81ec;
+  color: white;
+  width: 5%;
+  font-weight: bold;
+};
+
+
+.AccPriv {
+  height: 100vh;
+  margin-bottom: 0;
 }
